<resources>
    <string name="app_name">My Application</string>
    <string name="chocolate_syrup">Chocolate Syrup</string>
    <string name="sprinkles">Sprinkles</string>
    <string name="crushed_nuts">Crushed Nuts</string>
    <string name="cherries">Cherries</string>
    <string name="orio_cookie_crumbles">Orio Cookie Crumbles</string>
    <string name="pick_your_toppings">Pick Your Toppings</string>
    <string name="show_toast">Show Toast</string>
</resources>
